# sahool-project

./: .env  .env.example  .env.gaps.example  .env.production.example  .gitignore  ACCESSIBILITY_GUIDE.md  ADVISOR_INTEGRATION_ANALYSIS.md  AGRICULTURAL_UI_ENHANCEMENTS.md  AG_UI_FINAL_SUMMARY.md  AI_ENHANCEMENTS_v3.1.md  AI_ENHANCEMENTS_v3.2.md  ARCHITECTURE_COMPARISON.md  ARCHITECTURE_v15.md  ASSESSMENT_REPORT_v3.0.md  AUDIT_REPORT.md  BRANCH_AUDIT_REPORT.md  CODE_QUALITY_AUDIT_v16.md  COMPLETE_UI_TRANSFORMATION_GUIDE.md  COMPREHENSIVE_TEST_REPORT.md  CONTRIBUTING.md  DATABASE_IMPROVEMENTS_v3.2.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_NOTES.md  DEVELOPMENT.md  DEVELOPMENT_PLAN.md  DOCKER_DEPLOYMENT_GUIDE.md  ERROR_REDUCTION_GUIDE.md  GAP_ANALYSIS_REPORT.md  GAP_ANALYSIS_v9.md  GITHUB_ACTIONS_SETUP.md  IMPROVEMENTS_SUMMARY_v3.5.0.md  IMPROVEMENTS_v3.0.md  IMPROVEMENT_PROPOSALS.md  LICENSE  LLM_COST_TRACKING_GUIDE.md  MEMORY_CLEANUP_PATCH.md  MEMORY_LEAK_PREVENTION_GUIDE.md  Makefile  README.md  README_ENTERPRISE.md  (+33 more)
libs-shared/: README.md  pyproject.toml
libs-shared/sahool_shared/: __init__.py  secrets_manager.py
libs-shared/sahool_shared/auth/: __init__.py  dependencies.py  jwt.py  password.py
libs-shared/sahool_shared/cache/: __init__.py  redis_cache.py
libs-shared/sahool_shared/database/: __init__.py  connection.py  repository.py
libs-shared/sahool_shared/events/: __init__.py  event_bus.py  event_types.py
libs-shared/sahool_shared/intelligence/: index.ts  orchestrator.ts
libs-shared/sahool_shared/logging/: __init__.py  otel_logger.py
libs-shared/sahool_shared/models/: __init__.py  alert.py  audit.py  base.py  farmer.py  field.py  irrigation.py  ndvi.py  plant_health.py  region.py  soil.py  user.py  weather.py  yield_record.py
libs-shared/sahool_shared/openapi/: __init__.py  config.py  examples.py
libs-shared/sahool_shared/resilience/: __init__.py  circuit_breaker.py
libs-shared/tests/: conftest.py  test_auth.py  test_database.py  test_models.py  test_new_models.py
(+748 files in other folders)
